kubernetes-manifests/03-url-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-service
  namespace: linkshort
  labels:
    app: url-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-service
  template:
    metadata:
      labels:
        app: url-service
    spec:
      containers:
        - name: url-service
          image: aditer00/linkshort-url-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: url-service
  namespace: linkshort
spec:
  selector:
    app: url-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
